[tool.poetry]
name = "notifier"
version = "0.1.0"
description = ""
authors = ["natsuka.nakajima.nd <Natsuka.Nakajima@nttdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.53"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
